--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
+        "@popperjs/core": "^2.10.2",
         "bootstrap": "^5.1.3",
         "flag-icon-css": "^3.5.0"
     }
