--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "type": "library",
     "require": {
         "php": "^8.0",
+        "illuminate/console": "^8.0",
         "illuminate/support": "^8.0",
         "laravel/fortify": "^1.8"
     },
