Start Crud setup, add first version of index crud

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
             "providers": [
                 "Davesweb\\Dashboard\\ServiceProvider",
                 "Davesweb\\Dashboard\\RouteServiceProvider",
-                "Davesweb\\Dashboard\\FortifyServiceProvider"
+                "Davesweb\\Dashboard\\FortifyServiceProvider",
+                "Davesweb\\Dashboard\\CrudServiceProvider"
             ]
         }
     },
