--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
         "illuminate/support": "^8.0",
         "laravel/fortify": "^1.8"
     },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.2",
+        "orchestra/testbench": "^6.22"
+    },
     "license": "MIT",
     "autoload": {
         "psr-4": {
@@ -16,6 +20,11 @@
         "files": [
             "src/helpers.php"
         ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Davesweb\\Dashboard\\Tests\\": "tests/"
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -30,9 +39,9 @@
         }
     },
     "scripts": {
-        "cs-fixer": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
-    },
-    "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.2"
+        "cs-fixer": "vendor/bin/php-cs-fixer fix --allow-risky=yes",
+        "test": [
+            "vendor/bin/phpunit tests --colors --testdox"
+        ]
     }
 }
