--- a/composer.json
+++ b/composer.json
@@ -33,10 +33,11 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Davesweb\\Dashboard\\ServiceProvider",
-                "Davesweb\\Dashboard\\RouteServiceProvider",
-                "Davesweb\\Dashboard\\FortifyServiceProvider",
-                "Davesweb\\Dashboard\\CrudServiceProvider"
+                "Davesweb\\Dashboard\\Providers\\ServiceProvider",
+                "Davesweb\\Dashboard\\Providers\\RouteServiceProvider",
+                "Davesweb\\Dashboard\\Providers\\FortifyServiceProvider",
+                "Davesweb\\Dashboard\\Providers\\AuthServiceProvider",
+                "Davesweb\\Dashboard\\Providers\\CrudServiceProvider"
             ]
         }
     },
